objects/QIDC__Error_Log_ims__c.object
<CustomObject>
    <description>The Error Log object is used to track any errors that occur in the system.</description>
    <fields>
        <fullName>QIDC__Cause_ims__c</fullName>
        <description>The cause of the Error. This is used to understand why the error occurred.</description>
        <inlineHelpText>The cause of the Error. This is used to understand why the error occurred.</inlineHelpText>
        <label>Cause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Created_By_ims__c</fullName>
        <formula>CreatedBy.FirstName+&apos; &apos;+ CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Error_Code_ims__c</fullName>
        <description>The Error Code for the Error.</description>
        <inlineHelpText>The Error Code for the Error.</inlineHelpText>
        <label>Error Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__IntegrationID_ims__c</fullName>
        <description>External ID which is used for data loading only.</description>
        <inlineHelpText>External ID which is used for data loading only.</inlineHelpText>
        <label>Integration ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Job_Id_ims__c</fullName>
        <description>Job Id of the OneKey Delta download job</description>
        <inlineHelpText>Job Id of the OneKey Delta download job</inlineHelpText>
        <label>Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Message_ims__c</fullName>
        <description>The message thrown from the Error.</description>
        <inlineHelpText>The message thrown from the Error.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Origin_ims__c</fullName>
        <description>Where the Error originated in the system.</description>
        <inlineHelpText>Where the Error originated in the system.</inlineHelpText>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Status_ims__c</fullName>
        <description>The current status of the Error (Open, Closed).</description>
        <inlineHelpText>The current status of the Error (Open, Closed).</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Type_ims__c</fullName>
        <description>The type of Error that occurred.</description>
        <inlineHelpText>The type of Error that occurred.</inlineHelpText>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__User_Name_ims__c</fullName>
        <formula>QIDC__User_ims__r.FirstName +&apos; &apos;+ QIDC__User_ims__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__User_ims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User for which the Error occurred.</description>
        <inlineHelpText>The User for which the Error occurred.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Error_Logs_ims</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Log</label>
    <nameField>
        <displayFormat>ERR-{000000}</displayFormat>
        <label>Error Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>